cargo-features = ["edition"]

[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "API Mocking and Virtualization"
documentation = "https://docs.rs/libdeadmock"
edition = "2018"
homepage = "https://github.com/rustyhorde/libdeadmock"
keywords = [
    "API",
    "mock",
    "virtualization",
]
license = "MIT/Apache-2.0"
name = "libdeadmock"
readme = "README.md"
repository = "https://github.com/rustyhorde/libdeadmock"
version = "0.1.0"

[dependencies]
clap = "2"
dirs = "1"
failure = "0"
getset = "0"
serde = "1"
serde_derive = "1"
tomlenv = "0.2.0"
