[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "API Mocking and Virtualization"
documentation = "https://docs.rs/libdeadmock"
edition = "2018"
homepage = "https://github.com/rustyhorde/libdeadmock"
keywords = [
    "API",
    "mock",
    "virtualization",
]
license = "MIT/Apache-2.0"
name = "libdeadmock"
readme = "README.md"
repository = "https://github.com/rustyhorde/libdeadmock"
version = "0.1.2"

[dependencies]
clap = "2"
failure = "0"
getset = "0"
http = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog-async = "2"
slog-term = "2"
toml = "0"
tomlenv = "0"

[dependencies.slog]
version = "2"
features = ["max_level_trace", "release_max_level_trace"]

[dependencies.uuid]
version = "0"
features = ["serde", "u128", "v4"]
